remove 'Data Dictionary' text

--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -148,7 +148,7 @@
 
         <!--data dictionary card-->
         <mat-card *ngIf="showDictionary" style="margin-top: 25px;max-height: 500px">
-            <mat-card-title> {{selectedsdcDataset.Name}} {{selectedsdcDataset.Type}} Data Dictionary</mat-card-title><hr>
+            <mat-card-title> {{selectedsdcDataset.Name}} {{selectedsdcDataset.Type}}</mat-card-title><hr>
             <mat-card-content style="max-height: 400px;overflow: scroll">
                 <markdown [data]="dictionary"></markdown>
             </mat-card-content>
