Workstation resize option bug fix

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -728,7 +728,7 @@
   <h4>Upload files to SDC platform</h4>
   <hr>
   <div *ngIf="!uploadNotice">
-    <p><b>IMPORTANT: Do not upload any data that contains PII or CBI (as defined on the Data Provider Form)</b>></p>
+    <p><b>IMPORTANT: Users cannot upload PII or CBI data on their own. If you would like to upload data containing PII or CBI, you must contact the SDC Support Desk so that the request and its associated data can be tracked appropriately.</b></p>
     <div>
       <button class="btn btn-primary dotBtn upload-okayBtn" (click)="onOkayUploadClick()">OKAY</button>
       <button class="btn btn-primary dotBtn upload-cancelBtn" (click)="onNoClick()">CANCEL</button>
