Change SDC support email address from support@securedatacommons.com to sdc-support@dot.gov

--- a/webportal/webapp/src/app/account/faq/faq.component.html
+++ b/webportal/webapp/src/app/account/faq/faq.component.html
@@ -31,7 +31,7 @@
                             <img src="../../assets/images/faq_image/SignUp-1.png" class="mx-auto d-block width-70">
                         </span>
                         <span>
-                            <li class="push-top-30">Please download the access request form and fill out the required details and send an email to support@securedatacommons.com</li>
+                            <li class="push-top-30">Please download the access request form and fill out the required details and send an email to sdc-support@dot.gov</li>
                             <img src="../../assets/images/faq_image/SignUp-2.png" class="mx-auto d-block width-70">
                         </span>
                         <span>
