--- a/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
+++ b/webportal/webapp/src/app/account/loginsync/components/loginsync.component.html
@@ -15,7 +15,7 @@
             <input class="usa-button link-submit margin-top-3" type="submit" value="Sign in">
 
             <p class="margin-top-4 padding-top-4 border-top">Please sign in using your internal Secure Data Commons credentials. Accounts only need to be linked once.</p>
-            <p>If you do not remember your Secure Data Commons credentials, please contact the <a href = "mailto:support@securedatacommons.com" style="text-decoration: none;">Support Team.</a></p>
+            <p>If you do not remember your Secure Data Commons credentials, please contact the <a href = "mailto:sdc-support@dot.gov" style="text-decoration: none;">Support Team.</a></p>
             <p>Don't have an account? <a href="https://portal.securedatacommons.com/register" target="_blank" style="text-decoration: none;" rel="noopener noreferrer">Follow the instructions</a> on the Secure Data Commons portal to create one.</p>
           </fieldset>
         </form>
