--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -28,10 +28,10 @@
         </mat-radio-group>
       </div>
       <div style='width: 100%;padding-top:10px;' *ngIf="messageModel.dotEmployeeExistingContract === 'true'">
-          <p>Kindly email a copy of your data agreement with the requested data provider at <strong>support@securedatacommons.com</strong>. Access will be provided after the SDC team has validated the agreement.</p>
+          <p>Kindly email a copy of your data agreement with the requested data provider at <strong>sdc-support@dot.gov</strong>. Access will be provided after the SDC team has validated the agreement.</p>
       </div>
       <div style='width: 100%;padding-top:10px;' *ngIf="messageModel.dotEmployeeExistingContract === 'false'">
-          <p>Would you like to sign an agreement to use the data available on the SDC Platform? Kindly write to <strong>support@securedatacommons.com</strong></p>
+          <p>Would you like to sign an agreement to use the data available on the SDC Platform? Kindly write to <strong>sdc-support@dot.gov</strong></p>
       </div>
       <hr>
       <h5 style="font-size:16px;padding-top: 10px;">Geographic Extent of Access</h5>
