--- a/webportal/webapp/src/app/main/faq/faq.component.html
+++ b/webportal/webapp/src/app/main/faq/faq.component.html
@@ -31,7 +31,7 @@
                             <img src="../../assets/images/faq_image/SignUp-1.png" class="mx-auto d-block width-70">
                         </span>
                         <span>
-                            <li class="push-top-30">Download the access request form, fill out the required details, and send the form by email to support@securedatacommons.com</li>
+                            <li class="push-top-30">Download the access request form, fill out the required details, and send the form by email to sdc-support@dot.gov</li>
                             <img src="../../assets/images/faq_image/SignUp-2.png" class="mx-auto d-block width-70">
                         </span>
                         <!-- <span>
