--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -22,7 +22,7 @@
         <h3>Sign up</h3>
         <p class="textFormat">Please download the access request
           form below, fill out the required details and send an email
-          to support@securedatacommons.com. Once approved,
+          to sdc-support@dot.gov. Once approved,
           we will send you an email with the instructions for
           accessing the platform.</p>
 
