--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -440,7 +440,7 @@
           <div>
           <p style="margin-left: 30px">
             <b>
-              <i>Workstation must be in shutdown or stopped state for resizing.</i>
+              <i>Please shut down your workstation before resizing.</i>
             </b>
           </p>
         </div>
