Changed second workstation resize dialog

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -489,7 +489,7 @@
                 </i>
                 </span> For pricing related details <a href="https://aws.amazon.com/ec2/pricing/on-demand/" target="_blank">click here</a>.</b>
           <p>
-          <i>Note: Your workstation will be stopped, if it's currently running in order to resize the workstation. Please save your work before requesting the resize for workstation.</i>
+          <i>Note: Make sure your work is saved and your workstation is stopped before requesting a resize.</i>
           </p>
         </div>
         <hr>
