Updates 'Access Request Form' link

--- a/webportal/webapp/src/app/main/register/register.component.html
+++ b/webportal/webapp/src/app/main/register/register.component.html
@@ -21,14 +21,25 @@
       <div class="col-xs-6 column-two">
         <h3>Sign up</h3>
         <p class="textFormat">Please download the access request
-          form below, fill out the required details and send an email
+          form linked below, fill out the required details and send an email
           to sdc-support@dot.gov. Once approved,
           we will send you an email with the instructions for
           accessing the platform.</p>
 
         <div class="accessLink">
-          <a style="font-size:16px;" href="../../../assets/SDC_Form/SDCAccessRequestForm.pdf" target="_blank" >Access Request Form</a>
+          <a style="font-size:16px;" href="https://securedatacommons.atlassian.net/wiki/spaces/DESK/pages/1349484563/RT+Form+Researcher+Agreement+and+Access+Request"
+           aria-label="Open external link to form in a new tab" target="_blank" rel="noopener">
+           Access Request Form
+          </a>
+          <svg width="16px" height="16px" focusable="false" aria-label="(link is external)" viewBox="0 0 24 24" style="cursor:pointer">
+            <title>(link is external)</title>
+            <g stroke-width="2.1" stroke="#666" fill="none" stroke-linecap="round" stroke-linejoin="round">
+              <polyline points="17 13.5 17 19.5 5 19.5 5 7.5 11 7.5">
+              </polyline><path d="M14,4.5 L20,4.5 L20,10.5 M20,4.5 L11,13.5"></path>
+            </g>
+          </svg>
         </div>
+
       </div>
     </div>
     <div style="width:50px;height:50px;float:left;padding-left:10px;padding-top:20px;">
