--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -244,36 +244,43 @@
       <mat-dialog-content *ngIf="!trustedStatus">
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Name or short description of your derived dataset" [(ngModel)]="messageModel.derivedDatasetname" value="{{messageModel.derivedDatasetname}}" required>
+          <mat-hint>Alpha-numeric characters only please.</mat-hint>
           <mat-error align="end" *ngIf="!messageModel.derivedDatasetname">Required</mat-error>
-          <mat-hint align="end">Alpha-numeric characters only please. </mat-hint>
         </mat-form-field>
+
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Detailed description of the derived dataset" [(ngModel)]="messageModel.detailedderiveddataset" value="{{messageModel.detailedderiveddataset}}" required>
+          <mat-hint>Alpha-numeric characters only please.</mat-hint>
           <mat-error align="end" *ngIf="!messageModel.detailedderiveddataset">Required</mat-error>
-          <mat-hint align="end">Alpha-numeric characters only please. </mat-hint>
         </mat-form-field>
+
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Anchor dataset of interest or data provider"  [value]="selectedDataProvider" required>
           <mat-error align="end" *ngIf="!messageModel.dataprovider">Required</mat-error>
         </mat-form-field>
+
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Specific sub-datasets or data types used" [value]="selectedDatatype" required>
           <mat-error align="end" *ngIf="!messageModel.datatype">Required</mat-error>
         </mat-form-field>
+
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Additional datasources" [(ngModel)]="messageModel.datasources" value="{{messageModel.datasources}}" required>
+          <mat-hint>Alpha-numeric characters only please.</mat-hint>
           <mat-error align="end" *ngIf="!messageModel.datasources">Required</mat-error>
-          <mat-hint align="end">Alpha-numeric characters only please. </mat-hint>
         </mat-form-field>
+        
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Tags" [(ngModel)]="messageModel.tags" value="{{messageModel.tags}}">
-          <mat-hint align="end">Alpha-numeric characters only please. </mat-hint>
+          <mat-hint>Alpha-numeric characters only please.</mat-hint>
         </mat-form-field>
+
         <mat-form-field style='width: 100%'>
           <input matInput placeholder="Justification of Export" [(ngModel)]="messageModel.justifyExport" value="{{messageModel.justifyExport}}" required>
+          <mat-hint>Alpha-numeric characters only please.</mat-hint>
           <mat-error align="end" *ngIf="!messageModel.justifyExport">Required</mat-error>
-                    <mat-hint align="end">Alpha-numeric characters only please. </mat-hint>
         </mat-form-field>
+
         <hr>
         <mat-dialog-actions>
             <button class="btn btn-primary dotBtn request-exportCancelBtn" (click)="onNoClick()">CANCEL</button>
