Changes Data Export/Approval Form hints alignment and color

--- a/webportal/webapp/src/styles.css
+++ b/webportal/webapp/src/styles.css
@@ -115,3 +115,7 @@ font-size: 16px;
 transform: translateY(-1.28125em) scale(.90) perspective(100px) translateZ(0.001px);
 width: 133.33333%;
 }
+
+.custom-export-dialog .mat-hint {
+    color: lightgray;
+    }
